# aping-AI-Quick-Prompt

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE.md  PROMPT_INPUT_METHOD_ROADMAP.md  PromptInputMethod.sln  PromptInputMethod.slnx  README.md  README.zh-CN.md  REFERENCE_INDEX.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml
docs/: ai-short-drama-product-selling-points.md  ai-short-drama-workflow.md  cloud-sync-architecture.md  codex-for-open-source.md  comfyui-stable-diffusion-prompt-adapter.md  license-inventory.md  microsoft-store-submission.md  migration-from-xiaxia-pet.md  ocr-model-license-review.md  onedrive-sync-research.md  open-source-references.md  optimization-target-format.md  privacy.md  release-1.0-readiness.md  skill-source-candidates.md  template-source-imports.md  text-to-video-industry-pain-points.md  user-time-saving-audit.md  webdav-sync.md
examples/skills/aipin-template-review/: SKILL.md
native/: Cargo.toml
native/fire-eye-worker/: Cargo.toml
native/fire-eye-worker/src/: main.rs
native/ocr-rs-patched/: .gitignore  Cargo.toml  README.md  build.rs
native/ocr-rs-patched/cpp/include/: mnn_wrapper.h
native/ocr-rs-patched/cpp/src/: mnn_wrapper.cpp
native/ocr-rs-patched/src/: det.rs  engine.rs  error.rs  lib.rs  ori.rs  postprocess.rs  preprocess.rs  rec.rs
native/ocr-rs-patched/src/mnn/: docsrs_stub.rs  mod.rs
scripts/: Invoke-UiScreenshotChecks.ps1  New-MsixPackage.ps1  New-PublicDemoPackage.ps1  New-StoreMsixUpload.ps1
src/PromptInputMethod.App/: App.xaml  App.xaml.cs  CompactPromptWindow.xaml  CompactPromptWindow.xaml.cs  PromptInputMethod.App.csproj  RegionSelectionWindow.xaml  RegionSelectionWindow.xaml.cs  TrayMenuWindow.xaml  TrayMenuWindow.xaml.cs  app.manifest  appsettings.json  priconfig.xml
src/PromptInputMethod.App/Services/: AppDatabaseService.cs  AppSettings.cs  AppSettingsService.cs  ClipboardContextService.cs  CommonPromptService.cs  CredentialService.cs  FireEyeOcrProvider.cs  ForegroundWindowService.cs  GlobalHotkeyService.cs  LocalizationService.cs  ModelSendAuditService.cs  OcrProviderRouter.cs  OneDriveClientLauncherService.cs  OneDriveHistoryCryptoService.cs  OneDriveHistorySyncService.cs  OneDriveLocalFolderService.cs  OneDriveSyncExportService.cs  OneDriveSyncModels.cs  OneDriveVaultCacheService.cs  OptimizationTargetService.cs  PrivacyDataService.cs  PromptFavoriteService.cs  PromptHistoryService.cs  PromptTemplateCatalogService.cs  PromptVersionService.cs  SensitiveTextRedactor.cs  TrayIconService.cs  WebDavHistorySyncService.cs  WebDavRemoteStoreService.cs  (+2 more)
src/PromptInputMethod.Core/: PromptInputMethod.Core.csproj
store/: certification-notes.md  listing.en-US.md  listing.zh-CN.md
tests/PromptInputMethod.ReleaseChecks/: Program.cs  PromptInputMethod.ReleaseChecks.csproj
(+90 files in other folders)
